kustomize/instances/overlays/frontend/hipstershop/productcatalog-canary/virtualservices/fault-injection/abort/productcatalog-vs-abort-retry.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productcatalog-canary-inject-abort-vs
spec:
  hosts:
  - 'productcatalogservice'
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
      weight: 100
    - destination:
        host: productcatalogservice
        subset: v2
      weight: 0
    fault: 
        abort: 
          httpStatus: 500
          percentage: 
            value: 50
    retries:
      attempts: 3
      retryOn: 5xx
